--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,93 @@
+/* bungee-shade-latin-400-normal */
+@font-face {
+  font-family: 'Bungee Shade';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  src: url(@fontsource/bungee-shade/files/bungee-shade-latin-400-normal.woff2)
+      format('woff2'),
+    url(@fontsource/bungee-shade/files/bungee-shade-latin-400-normal.woff)
+      format('woff');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
+    U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* chivo-latin-wght-normal */
+@font-face {
+  font-family: 'Chivo Variable';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 100 900;
+  src: url(@fontsource-variable/chivo/files/chivo-latin-wght-normal.woff2)
+    format('woff2-variations');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
+    U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+:root {
+  --clr-dark-purple: #1a0c1d;
+  --clr-platinum: #e8e7e8;
+
+  --ff-headers: 'Bungee Shade', system-ui;
+  --ff-body-text: 'Chivo Variable', sans-serif;
+}
+
+/* GENERAL STYLING */
+body {
+  min-height: 100dvh;
+  background-color: var(--clr-dark-purple);
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  font-family: var(--ff-body-text);
+  color: var(--clr-platinum);
+}
+
+h1 {
+  font-family: var(--ff-headers);
+}
+
+.btn {
+  border: none;
+}
+
+/* HEADER STYLES */
+
 .header-section {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 2rem;
 }
 
 .header-cart-icon {
   width: 3rem;
+}
+
+.main-header-container {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.product-search-form {
+  display: flex;
+  gap: 1rem;
+}
+
+.search-bar {
+  padding: 0.25rem 1rem;
+  color: var(--clr-dark-purple);
+}
+
+.search-btn {
+  background-color: transparent;
+  padding: 0.25rem 1rem;
+}
+
+.search-btn:hover {
+  cursor: pointer;
+  scale: 1.125;
 }
