--- a/src/app.css
+++ b/src/app.css
@@ -78,6 +78,7 @@ ul {
   gap: 2rem;
 }
 
+/* SEARCH BAR STYLES */
 .product-search-form {
   display: flex;
   gap: 1rem;
@@ -95,6 +96,22 @@ ul {
 .search-btn:hover {
   cursor: pointer;
   scale: 1.125;
+}
+
+/* FILTERS STYLES */
+
+.filters-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 6rem;
+}
+
+.filters-container > label {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.25rem;
 }
 
 /* PRODUCTS STYLES */
@@ -117,7 +134,10 @@ ul {
 .product-item {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  justify-content: space-between;
+  gap: 0.75rem;
+  background-color: #100711;
+  padding: 1rem;
 }
 
 .product-item > h2 {
