--- a/src/app.css
+++ b/src/app.css
@@ -28,6 +28,8 @@
 
 :root {
   --clr-dark-purple: #1a0c1d;
+  --clr-bright-purple: #3a1b41;
+  --clr-very-dark-purple: #100711;
   --clr-platinum: #e8e7e8;
   --clr-platinum-transparent: #e8e7e8a9;
   --clr-electric-indigo: #711fff;
@@ -82,11 +84,16 @@ ul {
 .product-search-form {
   display: flex;
   gap: 1rem;
+  padding-right: 1rem;
+  border-radius: 1.5rem;
+  background-color: var(--clr-bright-purple);
 }
 
 .search-bar {
   padding: 0.25rem 1rem;
   color: var(--clr-dark-purple);
+  border-radius: 1.5rem 0 0 1.5rem;
+  border: none;
 }
 
 .search-btn {
@@ -136,7 +143,7 @@ ul {
   flex-direction: column;
   justify-content: space-between;
   gap: 0.75rem;
-  background-color: #100711;
+  background-color: var(--clr-very-dark-purple);
   padding: 1rem;
 }
 
