Consume the context in the Products component
The cart functionality was implemented in the Products component, now
when you press the add to cart button, will be added to the cart but
also the color and icon inside the button will change.

--- a/src/app.css
+++ b/src/app.css
@@ -290,3 +290,9 @@ ul {
   transform: translateY(-0.1875rem);
   background-color: var(--clr-electric-indigo-transparent);
 }
+
+/* CONDITIONAL RENDERING CLASSES */
+
+.product-item > button.remove-bg {
+  background-color: var(--clr-poppy-red);
+}
